The cross-origin checks in the multibuffer code are not sufficient, as they only trigger when a redirect happens. Service-workers do not need redirects to paste data from diffierent origins together.

This CL fixes that.

BUG=610747

Review-Url: https://codereview.chromium.org/1958123004
Cr-Commit-Position: refs/heads/master@{#392850}

Former-commit-id: c1f791b319a03f4b3a70e8dbaf0bb4c240a86087